--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -9,6 +9,8 @@ body {
 	color: var(--text-color);
 	font-family: 'Montserrat', sans-serif;
 	text-wrap: balance;
+	font-size: 20px;
+	font-weight: 400;
 }
 
 img {
