--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,2 +1,25 @@
 .header {
+	padding: 30px 0;
+
+	&__row {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	&__nav-list {
+		display: flex;
+		gap: 4em;
+
+		a {
+			transition: all 0.2s ease-in;
+			&:hover {
+				color: #525252;
+			}
+		}
+	}
+}
+.logo {
+	font-size: 38px;
+	font-weight: 600;
 }
