--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -52,13 +52,12 @@ ul li {
 }
 
 img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	vertical-align: top;
-}
-
-img,
-svg {
-	max-width: 100%;
-	height: auto;
+	background-position: center center;
+	background-repeat: no-repeat;
 }
 
 address {
